# kuma

./: .env.example  .pre-commit-config.yaml  README.md  Rendu.md  pyproject.toml
conversations-examples/: discord.json  imessage.json  signal.json  twitter.json  whatsapp.json
src/: answer.py  app.py  bot.py  main.py  ocr.py  response.py  text_extraction.py
