[project]
name = "kuma"
version = "0.1.0"
description = "AI agent recommending answers to messages depending on the conversation history, the person and the mood the user chooses."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "commitizen>=4.6.0",
    "ruff>=0.11.5",
]
